feat: Implement dark mode and settings page
Adds a settings page for user preferences, including dark mode. Integrates dark mode functionality into the application's UI and Tailwind CSS configuration.

Updates the Gemini service to correctly use the 'message' property for streaming responses and to handle cases where no search updates are found.

Enhances the study store with user settings, including wake-up time, daily goal, and dark mode preference. Also adds functionality to add new tasks to the daily routine.

Refactors the index.html to enable dark mode and improve scrollbar styling.

Includes the new settings page route in the application's routing configuration.

Optimizes the routine page by adding a calendar strip for date navigation and input for adding new tasks.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
   <style>
-    body { font-family: 'Inter', sans-serif; background-color: #f8fafc; }
+    body { font-family: 'Inter', sans-serif; }
     /* Custom Scrollbar */
     ::-webkit-scrollbar { width: 6px; height: 6px; }
     ::-webkit-scrollbar-track { background: transparent; }
     ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 3px; }
     ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
-    .glass-panel {
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-    }
+    .no-scrollbar::-webkit-scrollbar { display: none; }
+    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
 <script type="importmap">
 {
