feat: Enhance timer and analytics with new features
Introduces a new "reflection" phase to the timer component for post-session analysis.
Adds focus rating and topic tracking to study logs.
Integrates `pdfjs-dist` for potential future PDF handling capabilities.
Updates the Gemini service with a new "Chapter Health Report" generation capability.
Improves the analytics page to better visualize study data.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0?external=rxjs",
     "@angular/router": "https://esm.sh/@angular/router@^21.1.0?external=rxjs",
     "@angular/common": "https://esm.sh/@angular/common@^21.1.0?external=rxjs",
-    "@angular/forms": "https://esm.sh/@angular/forms@^21.1.0?external=rxjs"
+    "@angular/forms": "https://esm.sh/@angular/forms@^21.1.0?external=rxjs",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174"
   }
 }
 </script>
